--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "express": "nodemon --ignore './dist/' app.js",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -49,6 +50,7 @@
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.11.2",
     "codelyzer": "6.0.1",
+    "cors": "^2.8.5",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
     "karma": "5.2.3",
@@ -56,6 +58,7 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
+    "nodemon": "^2.0.7",
     "protractor": "7.0.0",
     "ts-node": "9.0.0",
     "tslint": "6.1.3",
