--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
     "core-js": "3.6.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "ngx-clipboard": "13.0.1",
     "ngx-cookie-service": "^11.0.2",
