--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "14"
+      - name: Install
         run: npm install
       - name: Run Build
         run: npm run build
