--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "npm run app.js",
     "build": "ng build",
     "express": "nodemon --ignore './dist/' app.js",
     "test": "ng test",
