--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node app.js",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "express": "nodemon --ignore './dist/' app.js",
     "test": "ng test",
     "lint": "ng lint",
