--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.29.1",
     "ngx-clipboard": "13.0.1",
     "ngx-cookie-service": "^11.0.2",
+    "ngx-print": "^1.2.1",
     "ngx-toastr": "13.0.0",
     "nouislider": "14.6.2",
     "rxjs": "6.6.3",
